tests/resource/valid/operation/greater_than_int.mamba
class MyClass(def a: Int)
    def f(self) -> Bool => self.a > 10

def a := MyClass(10)

a.f()
