tests/resource/invalid/type/definition/assign_to_function_call.mamba
class A
    def c: C

class C
    def my_field: Int := 10
    def my_field_accessor(self) -> Int => self.my_field

def mut a := A()
a.c.my_field_accessor() := 20
